tests/c_programs/declaration/invalid_parse/label_long_decl.c
// Label followed by long declaration - should fail to parse
int main(void) {
label:
    long x = 5;
    return 0;
}